Decay.theme.css
/* ... */
#app-mount .cozy-VmLDNB .avatar-2e8lTP {
  left: var(--message-padding);
  top: var(--message-padding);
  margin-top: 0;
}
#app-mount .cozy-VmLDNB.groupStart-3Mlgv1 {
  margin-top: var(--message-spacing);
}
#app-mount .cozy-VmLDNB.cozy-VmLDNB:not(.groupStart-3Mlgv1) {
  margin-top: calc(var(--message-padding) / -1);
  padding-top: 0.175rem;
}
#app-mount .cozy-VmLDNB .messageContent-2t3eCI {
  margin-left: -5px;
  padding-left: 5px;
}
#app-mount .cozy-VmLDNB .timestamp-p1Df1m.alt-1dvXnH {
  width: calc(40px + var(--message-padding));
  display: flex;
  justify-content: center;
}

/* - Attachments / Embeds / Codes - */
#app-mount .wrapper-3HVHpV {
  background: transparent;
}
#app-mount .wrapper-15CKyy {
  background: transparent;
  padding-top: var(--message-padding);
  padding-bottom: var(--message-padding);
  padding-left: 0;
  margin-left: 16px;
  margin-right: 8px;
  position: relative;
}
#app-mount .wrapper-15CKyy:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: var(--message-border-radius, var(--border-radius));
  background: var(--background-alt);
  z-index: -1;
}
#app-mount .wrapper-15CKyy .contents-1UYEBX,
#app-mount .wrapper-15CKyy .attachmentContainer-1zVy8E {
  padding-left: calc(40px + var(--message-padding) * 2);
}
#app-mount .wrapper-15CKyy .avatar-2e8lTP {
  left: var(--message-padding);
  top: var(--message-padding);
  margin-top: 0;
}
#app-mount .wrapper-15CKyy[style*=margin-top] {
  margin-top: var(--message-spacing) !important;
}
#app-mount .wrapper-15CKyy + .wrapper-15CKyy:not([style*=margin-top]) {
  margin-top: calc(var(--message-padding) / -1);
  padding-top: 0.175rem;
}
#app-mount .embedFull-1HGV2S {
  background: var(--background);
}
#app-mount .attachment-1PZZB2,
#app-mount .wrapperAudio-1Bzv_Z {
  background: var(--background);
  border-radius: var(--border-radius);
  border: none;
}
#app-mount .textContainer-36wgKK {
  border: none;
  background: var(--background-dark);
  border-radius: var(--border-radius) var(--border-radius) 0 0;
}
#app-mount .footer-GXWBBp {
  background: var(--background);
  border: none;
}
#app-mount pre code,
#app-mount code.inline {
  background: var(--background-alt);
  border-radius: var(--border-radius);
  border: none;
  padding: 5px;
}
#app-mount .reaction-3vwAF2 {
  background: var(--background);
}
#app-mount .reaction-3vwAF2.reactionMe-1PwQAc {
  background: rgba(var(--accent), 0.2);
  border-color: rgba(var(--accent), 1);
}
#app-mount .reaction-3vwAF2.reactionMe-1PwQAc .reactionCount-26U4As {
  color: rgba(var(--accent), 1);
}

/* Spoiler Text */
#app-mount .spoilerText-27bIiA.hidden-3B-Rum {
  border-radius: var(--border-radius);
  background: var(--background-light);
}
#app-mount .spoilerText-27bIiA .inlineContent-2YnoDy {
  background: var(--background-light);
  padding: 5px;
  border: 3px;;
}
.theme-light, #app-mount .spoilerText-27bIiA.hidden-3B-Rum {
  background: var(--background-alt);
}
.theme-light, #app-mount .spoilerText-27bIiA .inlineContent-2YnoDy {
  background: var(--background-alt);
}

/* Invites */
#app-mount .chat-2ZfjoI .wrapper-1HIH0j {
  background: var(--background-alt);
}
.theme-light #app-mount .chat-2ZfjoI .wrapper-1HIH0j {
  background: var(--background-dark);
}

/* - Mentions - */
#app-mount .wrapper-1ZcZW- {
  background: rgba(var(--accent), 0.5);
  color: var(--text-focus);
}
.theme-light, #app-mount .wrapper-1ZcZW- {
  background: rgba(140, 193, 255, 0.5);
}
#app-mount .wrapper-1ZcZW-:hover, #app-mount .wrapper-1ZcZW-.popout-open {
  background: rgba(var(--accent), 1);
  color: #fff;
}

#app-mount .cozy-VmLDNB.mentioned-Tre-dv .container-2sjPya {
  position: relative;
}
#app-mount .cozy-VmLDNB.mentioned-Tre-dv .messageContent-2t3eCI {
  position: relative;
}
#app-mount .cozy-VmLDNB.mentioned-Tre-dv .messageContent-2t3eCI:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 0 2.5px 2.5px 0;
  height: 100%;
  width: calc(100% - var(--message-padding));
  border-left: 2px solid rgba(var(--discord-yellow)/1);
  pointer-events: none;
}
.theme-light #app-mount .cozy-VmLDNB.mentioned-Tre-dv .messageContent-2t3eCI:after {
  border-left: 2px solid rgba(255, 150, 130,1)
}

#app-mount .cozy-VmLDNB.mentioned-Tre-dv .messageContent-2t3eCI:not(.repliedTextContent-1R3vnK) {
  color: var(--text-focus);
}

#app-mount .cozy-VmLDNB.mentioned-Tre-dv .container-2sjPya:before {
  content: "";
  position: absolute;
  pointer-events: none;
  top: 0;
  left: -5px;
  height: 100%;
  width: calc(100% - var(--message-padding) + 5px);
  border-left: 2px solid rgba(var(--discord-yellow)/1);
  border-radius: 0 0 var(--border-radius) 0;
}
#app-mount .container-3XgAHv .chat-1-OBC7 .cozy-VmLDNB.cozy-VmLDNB.mentioned-Tre-dv,
#app-mount .container-3XgAHv .chat-1rZYgu .cozy-VmLDNB.cozy-VmLDNB.mentioned-Tre-dv {
  z-index: -1;
}
#app-mount .cozy-VmLDNB.mentioned-Tre-dv .messageContent-2t3eCI:after {
  background: rgba(255, 200, 128, 0.2);
  z-index: -1;
}
.theme-light #app-mount .cozy-VmLDNB.mentioned-Tre-dv .messageContent-2t3eCI:after {
  background: rgba(233, 169, 128, 0.5);
}

/* - Replies - */
#app-mount .cozy-VmLDNB .repliedMessage-3Z6XBG {
  margin-left: calc(var(--message-padding) + 56px);
  padding: 2.5px 10px 2.5px 10px;
  border-radius: var(--border-radius);
}
#app-mount .cozy-VmLDNB .repliedMessage-3Z6XBG + .contents-2MsGLg .avatar-2e8lTP, #app-mount .cozy-VmLDNB .repliedMessage-3Z6XBG + .contents-2MsGLg img {
  top: 32px;
}
#app-mount .cozy-VmLDNB .repliedMessage-3Z6XBG:before {
  border-color: var(--text-muted);
}
#app-mount .cozy-VmLDNB .repliedTextPreview-1bvxun .messageContent-2t3eCI {
  padding: 3.5px 5px 3.5px 5px;
  margin: 2px 0 2px 0;
  border-radius: var(--border-radius);
}
#app-mount .cozy-VmLDNB .repliedTextPreview-1bvxun .messageContent-2t3eCI::after {
  left: 0;
  width: 100%;
}

#app-mount .cozy-VmLDNB .repliedMessage-3Z6XBG {
  background: var(--background-alt);
}
/* ... */

